# sdf-to-usd-converter

./: .gitignore  README.md  pyproject.toml
examples/: convert_mini_talon.sh
sdf_to_usd/: __init__.py  __main__.py  cli.py  converter.py  materials.py  mesh_converter.py  parser.py  physics.py  usd_builder.py  utils.py
tests/: test_parser.py
tests/test_data/: simple_box.sdf
